--- a/js/index.html
+++ b/js/index.html
@@ -7,6 +7,11 @@
   <title>JS Ninja</title>
 </head>
 <body>
+  <form action="/" method="get">
+    <input type="text" name="username" />
+    <input type="password" name="password" />
+    <button type="submit">Enviar</button>
+  </form>
   <script src="main.js"></script>
 </body>
 </html>
