--- a/js/index.html
+++ b/js/index.html
@@ -12,6 +12,8 @@
     <input type="password" name="password" />
     <button type="submit">Enviar</button>
   </form>
+  <br>
+  <button data-js="button">Parar cronômetro!</button>
   <script src="main.js"></script>
 </body>
 </html>
